# synthesis_bots_public

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  settings.toml  setup.py  tox.ini
src/synthesis_bots/decisions/: different_from_reagents.py  expected_mass_metals.py
src/synthesis_bots/planners/supramol/: host_guest.py
src/synthesis_bots/utils/: constants.py
src/synthesis_bots/utils/ms/: acquisition.py  csv_writer.py  plot.py
src/synthesis_bots/utils/nmr/: acquisition.py  processing.py  samples.py
src/synthesis_bots/workflows/ms/supramol/: screening.py
src/synthesis_bots/workflows/nmr/medchem/: diversity.py
src/synthesis_bots/workflows/nmr/supramol/: screening.py
